--- a/Angular/course-manager/src/app/courses/course-list.component.html
+++ b/Angular/course-manager/src/app/courses/course-list.component.html
@@ -13,12 +13,14 @@
     
     </thead>
     <tbody>
-        <tr *ngfor= "let course of courses">
-            <td>{{course.imagemUrl}}</td>
+        <tr *ngFor= "let course of courses">
+            <td><img [src]="course.imageUrl" width="40" height="40"></td>
             <td>{{course.name}}</td>
             <td>{{course.price}}</td>
             <td>{{course.code}}</td>
-            <td>{{course.rating}}</td>
+
+            <td><app-star [rating]="course.rating"></app-star></td>
+            
             <td>{{course.releaseDate}}</td>>
             <td></td>
 
