--- a/Angular/course-manager/src/app/courses/course-list.component.html
+++ b/Angular/course-manager/src/app/courses/course-list.component.html
@@ -1,4 +1,11 @@
 <h2>Couse List</h2>
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">Filter By:</label>
+    <div class="col-sm-10">
+        <input [(ngModel)]="filter" class="form-control">
+    </div>
+</div>
+
 <table class="table table-striped">
     <thead>
         <tr>
@@ -13,15 +20,15 @@
     
     </thead>
     <tbody>
-        <tr *ngFor= "let course of courses">
+        <tr *ngFor= "let course of filteredCourses">
             <td><img [src]="course.imageUrl" width="40" height="40"></td>
             <td>{{course.name}}</td>
             <td>{{course.price}}</td>
-            <td>{{course.code}}</td>
+            <td>{{course.code | lowercase }}</td>
+            <td>{{course.releaseDate | date: 'dd/MM/yyyy'}}</td>
 
             <td><app-star [rating]="course.rating"></app-star></td>
             
-            <td>{{course.releaseDate}}</td>>
             <td></td>
 
         </tr>
